--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "14.1.4",
     "lucide-react": "^0.361.0",
     "next": "14.1.4",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
