--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-config-next": "14.1.4",
     "lucide-react": "^0.361.0",
     "next": "14.1.4",
+    "next-auth": "beta",
     "next-themes": "^0.3.0",
     "postcss": "8.4.38",
     "react": "18.2.0",
