--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "^3.6.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.361.0",
     "next": "14.1.4",
     "next-auth": "beta",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "eslint-config-prettier": "^9.1.0",
