--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
+    "@uidotdev/usehooks": "^2.4.1",
     "autoprefixer": "10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -52,6 +53,7 @@
     "next-themes": "^0.3.0",
     "postcss": "8.4.38",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.1",
