--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next": "14.1.4",
     "next-auth": "beta",
     "next-themes": "^0.3.0",
+    "pdfjs-dist": "^4.0.379",
     "postcss": "8.4.38",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
@@ -69,6 +70,7 @@
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/pdfjs-dist": "^2.10.378",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "eslint-config-prettier": "^9.1.0",
