fix: default value for .env.local.template

--- a/.env.local.template
+++ b/.env.local.template
@@ -1,4 +1,4 @@
-AUTH_SECRET=
+AUTH_SECRET=secret
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
@@ -11,6 +11,4 @@ GITHUB_CLIENT_SECRET=
 
 RESEND_API_KEY=
 
-API_URL=
-
-API_URL=
+API_URL=http://localhost:8080
