--- a/.env.local.template
+++ b/.env.local.template
@@ -9,6 +9,6 @@ DISCORD_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
-RESEND_API_KEY=
+RESEND_API_KEY=resend_api_key
 
 API_URL=http://localhost:8080
