--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
     "@uidotdev/usehooks": "^2.4.1",
+    "@vercel/analytics": "^1.2.2",
     "autoprefixer": "10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
