--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "vite": "^5.2.8"
   }
 }
