--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -31,6 +31,7 @@ body:
         - Chrome
         - Safari
         - Microsoft Edge
+        - その他
   - type: textarea
     id: logs
     attributes:
