--- a/package.json
+++ b/package.json
@@ -80,5 +80,16 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "vite": "^5.2.8"
+  },
+  "packageManager": "bun@1.1.5",
+  "engines": {
+    "node": "20.x",
+    "npm": "please_use_bun_instead",
+    "yarn": "please_use_bun_instead",
+    "pnpm": "please_use_bun_instead",
+    "bun": "1.1.5"
+  },
+  "volta": {
+    "node": "20.12.2"
   }
 }
